# FILD

./: README.md
FILD/: README.md
FILD++/: CMakeLists.txt  README.md
FILD++/include/: lcdengine.hpp
FILD++/libraries/optimo/: CMakeLists.txt
FILD++/libraries/statx/: CMakeLists.txt
FILD++/libraries/visual_sfm/: DataInterface.h  util.h
FILD++/research/delf/delf.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
FILD++/research/delf/delf/protos/: aggregation_config_pb2.py  box_pb2.py  delf_config_pb2.py  feature_pb2.py
FILD++/research/delf/delf/python/: delf_v1.py  feature_extractor.py
FILD++/research/delf/delf/python/example/: delf_config_example.pbtxt  extract_features.py  extractor.py
FILD++/research/delf/delf/python/example/parameters/delf_gld_20190411/pca/: mean.datum  pca_variances.datum
FILD++/research/delf/delf/python/example/static_model/delf_both_white/: saved_model.pb
FILD++/research/delf/delf/python/example/static_model/delf_both_white/variables/: variables.index
FILD++/research/slim/slim.egg-info/: SOURCES.txt
FILD++/resource/: StLucia_100909_1210_image_list.txt  StLucia_100909_1410_image_list.txt  StLucia_180809_1545_image_list.txt  StLucia_190809_0845_image_list.txt  city_centre_image_list.txt  config_StLucia_100909_1210.txt  config_StLucia_100909_1410.txt  config_StLucia_180809_1545.txt  config_StLucia_190809_0845.txt  config_city.txt  config_kitti00.txt  config_kitti02.txt  config_kitti05.txt  config_kitti06.txt  config_malaga.txt  config_newcollege_right.txt  kitti00_image_list.txt  kitti02_image_list.txt  kitti05_image_list.txt  kitti06_image_list.txt  malaga_image_list.txt  newcollege_right_2624_image_list.txt
FILD++/src/: lcdengine.cpp  main.cpp  utils.cpp
FILD/hnswlib/src/: bruteforce.cpp
FILD/loop-closure-detection/: CMakeLists.txt
FILD/loop-closure-detection/include/: theialib.hpp
FILD/loop-closure-detection/resource/: .gitignore  bicocca_image_list_5267.txt  config_kitti00.txt  config_kitti05.txt  config_malaga.txt  config_mh05.txt  config_newcollege_all.txt  kitti05  malaga  mh05_image_list.txt  newcollege  newcollege_image_list.txt  newcollege_image_list_all.txt
FILD/loop-closure-detection/src/: extractor.cpp  lcdengine.cpp  main.cpp
FILD/theialib/: CMakeLists.txt
FILD/theialib/src/: cascade_hasher.cpp
FILD/train/: mobilenetv2_test.prototxt  mobilenetv2_train.prototxt
hnswlib/: build.sh  index_main.cpp
hnswlib/include/: hnswlib.hpp
hnswlib/src/: hnswalg.cpp  index.cpp  space_ip.cpp  space_l2.cpp  visited_list_pool.cpp
loop-closure-detection/include/: extractor.hpp  geometrical_verification.hpp  utils.hpp
loop-closure-detection/resource/: MH05  bicocca  bicocca_5267  bicocca_image_list.txt  config_newcollege.txt  kitti00  malaga_image_list.txt  newcollege_all
loop-closure-detection/src/: geometrical_verification.cu  lcdengine.cpp_surf_bak  utils.cpp
theialib/data/: StereoImage__1225720167.299774-left.pnm  StereoImage__1225720662.177992-left.pnm
theialib/include/: theialib.hpp
theialib/src/: main.cpp  main.cpp_bak  theialib.cpp
train/: mobilenetv2_deploy.prototxt  mobilenetv2_deploy_rmbn.prototxt  solver.prototxt
